completed 'JS Fundamentals' and 'Objects: the basics'

--- a/JavaScript Fundamentals/test.html
+++ b/JavaScript Fundamentals/test.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="6_simple_page.js"></script>
-    <script src="7_operators.js"></script>
-    <script src="8_comparison.js"></script>
+<!--    <script src="6_simple_page.js"></script>-->
+<!--    <script src="7_operators.js"></script>-->
+<!--    <script src="8_comparison.js"></script>-->
+<!--    <script src="11_check_for_login.js"></script>-->
+<!--    <script src="13_rewrite_switch.js"></script>-->
+    <script src="15_replace_arrow.js"></script>
 
 </head>
 <body>
